--- a/src/css/CreateStore.css
+++ b/src/css/CreateStore.css
@@ -1,10 +1,10 @@
 .sdtitle{
     font-weight: bold;
     font-size: 40px;
-     margin: 80px auto 40px;
+     margin: 30px auto 40px;
      color: #E1B107;
      border: none;
-     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
  }
  
   .inputtext{
@@ -42,5 +42,18 @@
  }
 
  .sidebartag{
+  margin-top: 30px;
    color: black;
+ }
+ .sidebartag:hover{
+  color: white;
+ }
+ .sidebartitle{
+  margin-top: 50px;
+  font-weight: bold;
+  font-size: 24px !important;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+ }
+ .hrtag{
+  border-bottom: 1px solid black !important;
  }
