--- a/src/css/StoreList.css
+++ b/src/css/StoreList.css
@@ -7,23 +7,28 @@
      text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
  }
 .listscard{
-    margin: 50px 0;
+    margin: 50px auto;
     padding: 10px 20px;
     background: #E1B107;
     border-radius: 0px 30px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     align-items: center;
+    width: 80%;
+}
+.listimage{
+    height: 140px;
+    width: 100px;
 }
 
 .listname{
     font-weight: 700;
-    font-size: 28px;
+    font-size: 22px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .listtext{
     font-weight: 500;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 @media (max-width: 468px)
