--- a/src/css/StoreRequests.css
+++ b/src/css/StoreRequests.css
@@ -13,6 +13,7 @@
     border-radius: 0px 30px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     align-items: center;
+    width: 90%;
 }
 
 .requestscardbtn{
@@ -25,8 +26,12 @@
     width: 180px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: center;
 }
-
+:Link{
+    text-decoration: none;
+}
 .requestname{
     font-weight: 700;
     font-size: 28px;
